fix (static): make assembler code auto expanded so that it doesn't seem unbalanced

--- a/static/result.html
+++ b/static/result.html
@@ -63,7 +63,7 @@
 
                         <h2 id="accordion-collapse-heading-assembler"
                             class="orange-low-saturation vim-folded flex items-center justify-between w-full text-left hover"
-                            data-accordion-target="#accordion-collapse-body-assembler" aria-expanded="false"
+                            data-accordion-target="#accordion-collapse-body-assembler" aria-expanded="true"
                             aria-controls="accordion-collapse-body-assembler">
                             <span class="noselect">assembler_code =</span>
                         </h2>
