feat (static): added newline spaces in accordions to make the slider a bit nicer

--- a/static/result.html
+++ b/static/result.html
@@ -101,7 +101,7 @@
                         </h2>
                         <div id="accordion-collapse-body-assembler" class="hidden"
                             aria-labelledby="accordion-collapse-heading-assembler">
-                            <pre id="assembler-code-text-element" class="rounded-lg overflow-x-auto ">
+                            <pre id="assembler-code-text-element" class="pb-4 rounded-lg overflow-x-auto ">
 {{assembler_code}}</pre>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         </h2>
                         <div id="accordion-collapse-body-simulation-config" class="hidden"
                             aria-labelledby="accordion-collapse-heading-simulation-config">
-                            <pre id="simulation-config-text-element" class="rounded-lg overflow-x-auto ">
+                            <pre id="simulation-config-text-element" class="pb-4 rounded-lg overflow-x-auto ">
 {{yaml_content}}</pre>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
                 </h2>
                 <div id="accordion-collapse-body-simulation-log" class="hidden"
                     aria-labelledby="accordion-collapse-heading-simulation-log">
-                    <pre id="simulation-log-text-element" class="overflow-x-auto ">
+                    <pre id="simulation-log-text-element" class="pb-4 overflow-x-auto ">
 {{result}}</pre>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                 </h2>
                 <div id="accordion-collapse-body-test-cases-result" class="hidden"
                     aria-labelledby="accordion-collapse-heading-test-cases-result">
-                    <pre id="test_cases_result-text-element" class="overflow-x-auto">
+                    <pre id="test_cases_result-text-element" class="pb-4 overflow-x-auto">
 {{test_cases_result}}</pre>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                     <span class="noselect">dump =</span>
                 </h2>
                 <div id="accordion-collapse-body-dump" class="hidden" aria-labelledby="accordion-collapse-heading-dump">
-                    <pre id="dump-text-element" class="rounded-lg overflow-x-auto ">
+                    <pre id="dump-text-element" class="pb-4 rounded-lg overflow-x-auto ">
 {{dump}}</pre>
                 </div>
             </div>
