--- a/static/result.html
+++ b/static/result.html
@@ -32,14 +32,14 @@
         href="https://github.com/ryukzak/wrench"
         class="purple hover"
         target="_blank"
-        >[GitHub]</a
+        >[github]</a
       >
       <span class="grey separator-char">|</span>
       <a
         href="https://github.com/ryukzak/wrench/tree/master/docs"
         class="fuschia hover"
         target="_blank"
-        >[ISA_doc]</a
+        >[isa_docs]</a
       >
       <span class="grey separator-char">|</span>
       <a
@@ -49,10 +49,8 @@
         >[variants]</a
       >
       <span class="grey separator-char">|</span>
-      <button onclick="onInvertClick()" class="blue hover">[invert]</button>
-      <span class="grey separator-char">|</span>
-      <button id="copy-link-button" onclick="copyLink()" class="white hover">
-        [copy_link]
+      <button onclick="onInvertClick()" class="blue hover">
+        [invert_theme]
       </button>
     </div>
 
@@ -164,7 +162,7 @@
             <div
               class="pr-6 flex flex-row justify-between items-center mt-6 mb-4"
             >
-              <span class="grey">/* simulation_config (YAML) */</span>
+              <span class="grey">/* simulation_config */</span>
               <button
                 id="copy-simulation-config-button"
                 onclick="copySimulationConfig()"
